<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="icecream_sandwiches">Icecream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donuts_are_glazed_and_sprinkled_with_candy">donuts</string>
    <string name="icecream_sandwiches_have_chocolate_wafers_and_vanilla_filling">ice_cream_sandwiches</string>
    <string name="froyo_is_premium_self_serve_frozen_yogurt">froyo</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="title_activity_order">Order Activity</string>


</resources>
